# shell-cluster

./: .gitignore  DESIGN.md  DESIGN_CN.md  HANDOFF.md  README.md  README_CN.md  package-lock.json  package.json  pyproject.toml
.superset/: config.json
archived/: DESIGN.md  DESIGN_CN.md  README_CN.md
archived/docs/: tailscale-backend.md
archived/scripts/: install-service.sh  restart-service.sh  start-dashboard.ps1
archived/tests/: test_close_session.py  test_exit.py  test_local_connect.py
docs/: cloudflare-tunnel-postmortem.md
public/: app.js  index.html  style.css
scripts/: install-service.ps1  postinstall.js  restart-service.ps1  start-dashboard.sh  test-pty-spawn.js  test-ws-connect.js  test-ws-host.js
server/: README.md  package.json
server/public/: addon-attach.min.js  app.js  index.html
server/src/: cli.js  daemon.js  dashboard-server.js  index.js  serve-static.js  shell-server.js  static-server.js
src/: cli.js  config.js  daemon.js  dashboard-server.js  index.js  shell-manager.js  shell-server.js
src/shell-dashboard/: server.py
src/shell_cluster/: __init__.py  cli.py  client.py  config.py  daemon.py  discovery.py  models.py  protocol.py  server.py  shell_manager.py
src/tunnel/: base.js  devtunnel.js  tailscale-proxy.js
tests/: test_close_session.py  test_dashboard_query.py  test_dual_instance.py  test_session_cleanup.py  test_tailscale_backend.py
tests/e2e/: shell-server.e2e.test.js
tests/ime/: replay.html  simple_xterm.html  start_test_server.py  test_cjk_backend.py
tests/unit/: checks.test.js  config.test.js  devtunnel.test.js  (+6 more)
(+39 files in other folders)
