[project]
name = "shell-cluster"
version = "0.1.0"
description = "Remote access to all your shells across machines via tunnels"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
dependencies = [
    "click>=8.1",
    "websockets>=12.0",
    "platformdirs>=4.0",
    "tomli-w>=1.0",
    "rich>=13.0",
    "pywinpty>=2.0; sys_platform == 'win32'",
    "ptyprocess>=0.7; sys_platform != 'win32'",
]

[project.scripts]
shellcluster = "shell_cluster.cli:main"
shell-dashboard = "shell_cluster.dashboard_v2.server:main"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/shell_cluster"]
